# autoBind

./: CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  environment.yml  extract_frcmod.py  makeAmberVals.py  position_molecules.py  pyproject.toml
autoBind/: CONTRIBUTING.md  README.md  environment.yml  input_tleap.in  justfile  pyproject.toml
autoBind/.github/: ISSUE_TEMPLATE.md
autoBind/data/counterions/: BFV.mol2
autoBind/data/solvent_box_info/: DCMequilbox.lib
autoBind/docs/: index.md  usage.md
autoBind/src/autobind/: __init__.py  autobind.py
autoBind/src/autobind/data/counterions/: BFW.mol2  BFY.mol2
autoBind/tests/: __init__.py
binding_substrates/: PZQ.frcmod
docs/: installation.md
src/autoBind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/autobind/: autobind.py  cli.py  extract_frcmod_unique.py
src/autobind/data/binding_substrates/: PZQ.mol2
src/autobind/data/counterions/: BFX.mol2
src/autobind/data/solvent_box_info/: ACEequilbox.lib  DMSOequilbox.lib  HCNequilbox.lib  Nitroequilbox.lib  THFequilbox.lib  leaprc.gaff2  oDFBequilbox.lib
tests/: test_autobind.py
