[project]
name = "autoBind"
version = "0.1.0"
description = "A package to automatically parametrize and run MD equilibration and then enahanced sampling calculations for Pd2L4 cage systems"
readme = "README.md"
authors = [
  {name = "Melissa T. Manetsch", email = "manets12@mit.edu"}
]
maintainers = [
  {name = "Melissa T. Manetsch", email = "manets12@mit.edu"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "numpy",
  "parmed",
  "metallicious",
]
requires-python = ">= 3.9"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/mane292/autobind/issues"
changelog = "https://github.com/mane292/autobind/blob/master/changelog.md"
homepage = "https://github.com/mane292/autobind"

[project.scripts]
autobind = "autobind.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autobind = [
  "data/**/*",
]

[tool.uv]
package = true
